@@ -1,3 +1,8 @@
+2004-12-14  Derek Price  <derek@ximbiot.com>
+
+	* Makefile.am (EXTRA_DIST): Add HACKING.DOCS & writeproxy.rtf.
+	(SUBDIRS): Add i18n.
+
 2004-12-09  Derek Price  <derek@ximbiot.com>
 
 	* cvs.texinfo (Error messages): Note that old, val-tags, "no such tag"
